test/conformance/kuttl/webhooks/namespaced-policy-clusterpolicy/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    webhook.kyverno.io/managed-by: kyverno
  name: kyverno-resource-validating-webhook-cfg
webhooks:
- failurePolicy: Fail
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - 'v1'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    - CONNECT
    resources:
    - 'configmaps'
    scope: '*'
  - apiGroups:
      - ''
    apiVersions:
      - 'v1'
    operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
    resources:
      - 'configmaps'
    scope: 'Namespaced'
